Fix minor image issue on small screens

--- a/wordpress/wp-content/themes/sockbrew-theme/style.css
+++ b/wordpress/wp-content/themes/sockbrew-theme/style.css
@@ -1285,6 +1285,7 @@ h5{font-size: 1.5rem;}
 
 	.news-image {
 		min-width: 100%;
+		padding: 1rem 0;
 	}
 
 	.publications-container{
